# JumpingFile-core

./: .gitignore  CMakeLists.txt  README.md
include/jumpingkey/core/configuration/: JumpingFileConfiguration.h
include/jumpingkey/core/log/: JumpingFileLogger.h  Logger.h
include/jumpingkey/core/webservices/: StatusWebService.h
include/jumpingkey/test/: testClass.h
src/jumpingkey/configuration/: JumpingfileConfiguration.cpp
src/jumpingkey/core/configuration/: JumpingfileConfiguration.cpp
src/jumpingkey/core/log/: JumpingFileLogger.cpp  Logger.cpp
src/jumpingkey/core/webservices/: StatusWebService.cpp
src/jumpingkey/test/: testClass.cpp  testRunListener.cpp
src/main/: main.cpp
tests/: testMain.cpp
tools/: CMakeLists.txt
